--- a/main.css
+++ b/main.css
@@ -7,4 +7,31 @@ body {
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    text-transform: capitalize;
+}
+.counter-box {
+    flex:  0 0 70%;
+    margin: 100px;
+    text-align: center;
+    border: 3px solid rgb(196, 12, 12);
+    padding: 3rem 1rem;
+    font-weight: bold;
+    box-shadow: 3px 3px 10px 10px rgb(196, 12, 12);
+}
+.counter {
+    font-size: 6rem;
+}
+.btn {
+    background: #fff;
+    font-size: 1rem;
+    padding: 0.5rem;
+}
+.btn:hover {
+    background-color: #4caf50;
+    color: white;
+}
+.btn:active {
+color: black;
 }
